# rhid-mcp

./: .dockerignore  .env  .gitignore  CI.yml  DEPLOY.MD  Dockerfile  Makefile  README.MD  docker-compose.yml  env.example  http_server.py  pyproject.toml  requirements.txt  rhid_client.py  server.py  test_client.py
.github/workflows/: CI.yml  publish.yml
docs/: manual.md
systemd/: rhid-mcp.service
tools/: _utils.py  alerttype.py  colaboradores.py  escalas.py  holiday.py  justificationtype.py  layouttxt.py  operatorrole.py  organizacao.py  ponto.py  reasondismissal.py  relatorios.py
